--- a/sorvete_delicia/polls/templates/footer.html
+++ b/sorvete_delicia/polls/templates/footer.html
@@ -5,13 +5,13 @@
 <section class="py-5 bg-light">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" id="SobreNos">
                 <h2>Sobre Nós</h2>
                 <p>Somos uma empresa familiar que produz os melhores sorvetes da cidade há mais de 20 anos.
                     Utilizamos apenas ingredientes de alta qualidade em nossas receitas e estamos sempre em busca de
                     novos sabores para agradar nossos clientes.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" id="Contato">
                 <h2>Contato</h2>
                 <p>Telefone: (11) 5555-5555</p>
                 <p>Email: contato@sorvetesdelicia.com.br</p>
