--- a/sorvete_delicia/polls/templates/index.html
+++ b/sorvete_delicia/polls/templates/index.html
@@ -9,14 +9,14 @@
 
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="http://localhost:8000/image/{{sorvete.imagem}}" class="card-img-top">
+                        <img src="http://localhost:8000/exibir_imagem/{{sorvete.imagem}}" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">{{sorvete.sabor}}</h5>
                             <p class="card-text">
                                 Marca: {{sorvete.marca}} <br>
                                 Preço por mL: R${{sorvete.preco}}
                             </p>
-                            <a href="#" class="btn btn-primary">Compre agora!</a>
+                            <a href="http://localhost:8000/sorvete/{{sorvete.id}}" class="btn btn-primary">Compre agora!</a>
                         </div>
                     </div>
                 </div>
