--- a/sorvete_delicia/polls/templates/sorvete.html
+++ b/sorvete_delicia/polls/templates/sorvete.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!-- Banner principal -->
-<section class="py-5 bg-light">
+<section class="py-5">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -22,26 +22,61 @@
             </div>
             <div class="col-md-6">
                 <img src="http://localhost:8000/exibir_imagem/{{sorvete.imagem}}" 
-                    alt={{sorvete.sabor}} class="img-fluid">
+                    alt={{sorvete.sabor}} class="img-fluid" width="320px">
             </div>
         </div>
     </div>
 </section>
 
-<!-- Seção de detalhes do produto -->
-<section class="py-5">
+<!-- Seção Compra-->
+<section class="py-5 bg-primary text-white">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                
+            <div class="col-md-4">
+                {% for tigela in lista_tigelas %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="tigela" id="{{tigela.tamanho}}-{{tigela.tipo}}" value="{{tigela.tamanho}}">
+                        <label class="form-check-label" for="tigela">
+                            {{tigela.tamanho}}ml <br/>
+                        </label>
+                    </div>
+                {% endfor %}
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
+                {% for componente in lista_componentes %}
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="componente" value="{{componente.preco}}" id="{{componente.nome}}">
+                        <label class="form-check-label" for="componente">
+                            {{componente.nome}} - R$ {{componente.preco}}
+                        </label>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col-md-4">
                 <h2>Preço</h2>
-                <p class="lead">R$ 10,00</p>
-                <a href="#" class="btn btn-primary">Compre agora!</a>
+                <p class="lead" id="preco">R$ ??,??</p>
+                <a href="#" class="btn bg-white text-primary">Comprar!</a>
             </div>
         </div>
     </div>
 </section>
+
+<script type="text/javascript">
+
+window.addEventListener('load', 
+    function(){
+        disnable_tigelas();
+        calcula_preco();
+    }, false);
+
+function disnable_tigelas(){
+    return false;
+}
+
+function calcula_preco(){
+    alert($("input[type='radio'][name='rate']:checked").val());
+}
+
+</script>
 
 {% endblock %}
