--- a/sorvete_delicia/polls/templates/footer.html
+++ b/sorvete_delicia/polls/templates/footer.html
@@ -2,7 +2,7 @@
 {% endblock  %}
 
 <!-- Seção de informações -->
-<section class="py-5 bg-light">
+<section class="py-5">
     <div class="container">
         <div class="row">
             <div class="col-md-6" id="SobreNos">
