--- a/sorvete_delicia/polls/templates/header.html
+++ b/sorvete_delicia/polls/templates/header.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    {% include 'messages.html' %}
     <!-- Barra de navegação -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
@@ -21,6 +22,23 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    {% if user.is_authenticated %}
+      
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Bem-Vindo, {{user.username}}</a>
+                    </li>
+
+                    {% else %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+
+                    {% endif %}
+
                     <li class="nav-item">
                         <a class="nav-link" href="http://localhost:8000/">Produtos</a>
                     </li>
