pagina sorvete finalizada

--- a/sorvete_delicia/polls/templates/index.html
+++ b/sorvete_delicia/polls/templates/index.html
@@ -14,7 +14,7 @@
                             <h5 class="card-title">{{sorvete.sabor}}</h5>
                             <p class="card-text">
                                 Marca: {{sorvete.marca}} <br>
-                                Preço por mL: R${{sorvete.preco}}
+                                Preço por ml: R${{sorvete.preco}}
                             </p>
                             <a href="http://localhost:8000/sorvete/{{sorvete.id}}" class="btn btn-primary">Compre agora!</a>
                         </div>
