add: Sistema produtos

--- a/sorvete_delicia/polls/templates/footer.html
+++ b/sorvete_delicia/polls/templates/footer.html
@@ -7,15 +7,19 @@
         <div class="row">
             <div class="col-md-6" id="SobreNos">
                 <h2>Sobre Nós</h2>
-                <p>Somos uma empresa familiar que produz os melhores sorvetes da cidade há mais de 20 anos.
-                    Utilizamos apenas ingredientes de alta qualidade em nossas receitas e estamos sempre em busca de
-                    novos sabores para agradar nossos clientes.</p>
+                <p>
+                    Somos uma empresa familiar que revendemos os melhores sorvetes da cidade há mais de 20 anos.
+                    O melhor sorvete é aquele montado por vocês!
+                    Utilizamos apenas produtos de alta qualidade em nossa loja e estamos sempre em busca de agradar nossos clientes.
+                </p>
             </div>
             <div class="col-md-6" id="Contato">
                 <h2>Contato</h2>
-                <p>Telefone: (11) 5555-5555</p>
-                <p>Email: contato@sorvetesdelicia.com.br</p>
-                <p>Endereço: Rua das Flores, 123 - Centro - São Paulo/SP</p>
+                <p>
+                    Telefone: (11) 5555-5555 <br/>
+                    Email: contato@sorvetesdelicia.com.br <br/>
+                    Endereço: Rua das Flores, 123 - Centro - São Paulo/SP <br/>
+                </p>
             </div>
         </div>
     </div>
