--- a/sorvete_delicia/polls/templates/header.html
+++ b/sorvete_delicia/polls/templates/header.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorvetes Delícia - Venda de Sorvetes</title>
+    <title>Sorvetes Delícia</title>
     <!-- Adicionando o link para o arquivo CSS do Bootstrap 5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
 </head>
@@ -16,38 +16,45 @@
     <!-- Barra de navegação -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="http://localhost:8000/">Sorvetes Delícia</a>
+            <a class="navbar-brand" href="/">Sorvetes Delícia</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+
+                    <li class="nav-item border-end">
+                        <a class="nav-link" href="/">Sorvertes</a>
+                    </li>
+                    <li class="nav-item border-end">
+                        <a class="nav-link" href="#SobreNos">Sobre Nós</a>
+                    </li>
+                    <li class="nav-item border-end">
+                        <a class="nav-link" href="#Contato">Contato</a>
+                    </li>
+
                     {% if user.is_authenticated %}
       
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Bem-Vindo, {{user.username}}</a>
-                    </li>
+                        <li class="nav-item border-end">
+                            <a class="nav-link" href="#">Minhas Compras</a>
+                        </li>
+
+                        <li class="nav-item border-end">
+                            <a class="nav-link" href="/meus_sorvetes">Meus Sorvertes</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Sair</a>
+                        </li>
 
                     {% else %}
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Login</a>
+                        </li>
 
                     {% endif %}
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="http://localhost:8000/">Produtos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#SobreNos">Sobre Nós</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#Contato">Contato</a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -57,4 +64,5 @@
     {% endblock  %}
 
 </body>
+
 {% endblock %}
