Sistema de visualização de compras

--- a/sorvete_delicia/polls/templates/header.html
+++ b/sorvete_delicia/polls/templates/header.html
@@ -36,7 +36,7 @@
                     {% if user.is_authenticated %}
       
                         <li class="nav-item border-end">
-                            <a class="nav-link" href="#">Minhas Compras</a>
+                            <a class="nav-link" href="/minhas_compras">Minhas Compras</a>
                         </li>
 
                         <li class="nav-item border-end">
